tests/errors/semantic/blocking/REAL_TYPE.py

def f(a : 'real'):
    pass
